src/gramatica/GramaticaParser.java
// Generated from D:/vacas-junio-2022/proyecto-olc2/grammar\Gramatica.g4 by ANTLR 4.10.1
package gramatica;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramaticaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, INT=43, REAL=44, BOOLEAN=45, CHARACTER=46, 
		STRING=47, IDEN=48, EQUAL=49, NOTEQUAL=50, GREATEREQUAL=51, LESSEQUAL=52, 
		GREATER=53, LESS=54, AND=55, OR=56, NOT=57, EQUIV=58, NOTEQUIV=59, COMMENT=60, 
		WS=61;
	public static final int
		RULE_start = 0, RULE_lfunc = 1, RULE_unitfunc = 2, RULE_mainblock = 3, 
		RULE_linstrucciones = 4, RULE_instruccion = 5, RULE_funcinst = 6, RULE_funcinstwith = 7, 
		RULE_funcinstwithout = 8, RULE_subroutineinst = 9, RULE_subroutineinstwith = 10, 
		RULE_subroutineinstwithout = 11, RULE_lparam = 12, RULE_callsubinst = 13, 
		RULE_lparamexp = 14, RULE_ldclparams = 15, RULE_declarationparams = 16, 
		RULE_noneinst = 17, RULE_arrayinst = 18, RULE_arraydinainst = 19, RULE_ldcldims = 20, 
		RULE_asigdimarray = 21, RULE_desasigdimarray = 22, RULE_asiginst = 23, 
		RULE_ldimeArray = 24, RULE_dimeArray = 25, RULE_ifinst = 26, RULE_lif = 27, 
		RULE_ifblck = 28, RULE_elseblck = 29, RULE_doinst = 30, RULE_doconf = 31, 
		RULE_doconflist = 32, RULE_dowhileinst = 33, RULE_exitinst = 34, RULE_cycleinst = 35, 
		RULE_print = 36, RULE_printexps = 37, RULE_printexp = 38, RULE_declaration = 39, 
		RULE_ldeclarations = 40, RULE_indecla = 41, RULE_type = 42, RULE_expr = 43;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "lfunc", "unitfunc", "mainblock", "linstrucciones", "instruccion", 
			"funcinst", "funcinstwith", "funcinstwithout", "subroutineinst", "subroutineinstwith", 
			"subroutineinstwithout", "lparam", "callsubinst", "lparamexp", "ldclparams", 
			"declarationparams", "noneinst", "arrayinst", "arraydinainst", "ldcldims", 
			"asigdimarray", "desasigdimarray", "asiginst", "ldimeArray", "dimeArray", 
			"ifinst", "lif", "ifblck", "elseblck", "doinst", "doconf", "doconflist", 
			"dowhileinst", "exitinst", "cycleinst", "print", "printexps", "printexp", 
			"declaration", "ldeclarations", "indecla", "type", "expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'program'", "'end'", "'function'", "'('", "')'", "'result'", "'subroutine'", 
			"','", "'call'", "'intent'", "'in'", "'::'", "'implicit'", "'none'", 
			"'dimension'", "'allocatable'", "':'", "'allocate'", "'deallocate'", 
			"'='", "'(/'", "'/)'", "'['", "']'", "'if'", "'else'", "'then'", "'do'", 
			"'while'", "'exit'", "'cycle'", "'print'", "'*'", "'integer'", "'real'", 
			"'complex'", "'character'", "'logical'", "'-'", "'**'", "'/'", "'+'", 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"'.and.'", "'.or.'", "'.not.'", "'.eqv.'", "'.neqv.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "INT", "REAL", "BOOLEAN", "CHARACTER", 
			"STRING", "IDEN", "EQUAL", "NOTEQUAL", "GREATEREQUAL", "LESSEQUAL", "GREATER", 
			"LESS", "AND", "OR", "NOT", "EQUIV", "NOTEQUIV", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gramatica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramaticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public LfuncContext lfunc() {
			return getRuleContext(LfuncContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			lfunc(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LfuncContext extends ParserRuleContext {
		public LfuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lfunc; }
	 
		public LfuncContext() { }
		public void copyFrom(LfuncContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LfuncfirstContext extends LfuncContext {
		public UnitfuncContext unitfunc() {
			return getRuleContext(UnitfuncContext.class,0);
		}
		public LfuncfirstContext(LfuncContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitLfuncfirst(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LfuncnextContext extends LfuncContext {
		public LfuncContext lfunc() {
			return getRuleContext(LfuncContext.class,0);
		}
		public UnitfuncContext unitfunc() {
			return getRuleContext(UnitfuncContext.class,0);
		}
		public LfuncnextContext(LfuncContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitLfuncnext(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LfuncContext lfunc() throws RecognitionException {
		return lfunc(0);
	}

	private LfuncContext lfunc(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		LfuncContext _localctx = new LfuncContext(_ctx, _parentState);
		LfuncContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_lfunc, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new LfuncfirstContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(91);
			unitfunc();
			}
			_ctx.stop = _input.LT(-1);
			setState(97);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new LfuncnextContext(new LfuncContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_lfunc);
					setState(93);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(94);
					unitfunc();
					}
					} 
				}
				setState(99);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class UnitfuncContext extends ParserRuleContext {
		public MainblockContext mainblock() {
			return getRuleContext(MainblockContext.class,0);
		}
		public SubroutineinstContext subroutineinst() {
			return getRuleContext(SubroutineinstContext.class,0);
		}
		public FuncinstContext funcinst() {
			return getRuleContext(FuncinstContext.class,0);
		}
		public UnitfuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unitfunc; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitUnitfunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnitfuncContext unitfunc() throws RecognitionException {
		UnitfuncContext _localctx = new UnitfuncContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_unitfunc);
		try {
			setState(103);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				mainblock();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				subroutineinst();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 3);
				{
				setState(102);
				funcinst();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainblockContext extends ParserRuleContext {
		public Token frid;
		public Token secid;
		public LinstruccionesContext linstrucciones() {
			return getRuleContext(LinstruccionesContext.class,0);
		}
		public List<TerminalNode> IDEN() { return getTokens(GramaticaParser.IDEN); }
		public TerminalNode IDEN(int i) {
			return getToken(GramaticaParser.IDEN, i);
		}
		public MainblockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainblock; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitMainblock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainblockContext mainblock() throws RecognitionException {
		MainblockContext _localctx = new MainblockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mainblock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(T__0);
			setState(106);
			((MainblockContext)_localctx).frid = match(IDEN);
			setState(107);
			linstrucciones(0);
			setState(108);
			match(T__1);
			setState(109);
			match(T__0);
			setState(110);
			((MainblockContext)_localctx).secid = match(IDEN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinstruccionesContext extends ParserRuleContext {
		public LinstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_linstrucciones; }
	 
		public LinstruccionesContext() { }
		public void copyFrom(LinstruccionesContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LinstruccionesfirstContext extends LinstruccionesContext {
		public InstruccionContext instruccion() {
			return getRuleContext(InstruccionContext.class,0);
		}
		public LinstruccionesfirstContext(LinstruccionesContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitLinstruccionesfirst(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LinstruccionesnextContext extends LinstruccionesContext {
		public LinstruccionesContext linstrucciones() {
			return getRuleContext(LinstruccionesContext.class,0);
		}
		public InstruccionContext instruccion() {
			return getRuleContext(InstruccionContext.class,0);
		}
		public LinstruccionesnextContext(LinstruccionesContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitLinstruccionesnext(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LinstruccionesContext linstrucciones() throws RecognitionException {
		return linstrucciones(0);
	}

	private LinstruccionesContext linstrucciones(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		LinstruccionesContext _localctx = new LinstruccionesContext(_ctx, _parentState);
		LinstruccionesContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_linstrucciones, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new LinstruccionesfirstContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(113);
			instruccion();
			}
			_ctx.stop = _input.LT(-1);
			setState(119);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new LinstruccionesnextContext(new LinstruccionesContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_linstrucciones);
					setState(115);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(116);
					instruccion();
					}
					} 
				}
				setState(121);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class InstruccionContext extends ParserRuleContext {
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
	 
		public InstruccionContext() { }
		public void copyFrom(InstruccionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclContext extends InstruccionContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public DeclContext(InstruccionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitDecl(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NoneContext extends InstruccionContext {
		public NoneinstContext noneinst() {
			return getRuleContext(NoneinstContext.class,0);
		}
		public NoneContext(InstruccionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitNone(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DoContext extends InstruccionContext {
		public DoinstContext doinst() {
			return getRuleContext(DoinstContext.class,0);
		}
		public DoContext(InstruccionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitDo(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CycleContext extends InstruccionContext {
		public CycleinstContext cycleinst() {
			return getRuleContext(CycleinstContext.class,0);
		}
		public CycleContext(InstruccionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitCycle(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ArrayasiContext extends InstruccionContext {
		public ArrayinstContext arrayinst() {
			return getRuleContext(ArrayinstContext.class,0);
		}
		public ArrayasiContext(InstruccionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitArrayasi(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DclarraydiContext extends InstruccionContext {
		public ArraydinainstContext arraydinainst() {
			return getRuleContext(ArraydinainstContext.class,0);
		}
		public DclarraydiContext(InstruccionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitDclarraydi(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DowhileContext extends InstruccionContext {
		public DowhileinstContext dowhileinst() {
			return getRuleContext(DowhileinstContext.class,0);
		}
		public DowhileContext(InstruccionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitDowhile(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CallsubContext extends InstruccionContext {
		public CallsubinstContext callsubinst() {
			return getRuleContext(CallsubinstContext.class,0);
		}
		public CallsubContext(InstruccionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitCallsub(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExitContext extends InstruccionContext {
		public ExitinstContext exitinst() {
			return getRuleContext(ExitinstContext.class,0);
		}
		public ExitContext(InstruccionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitExit(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DesasiarrayContext extends InstruccionContext {
		public DesasigdimarrayContext desasigdimarray() {
			return getRuleContext(DesasigdimarrayContext.class,0);
		}
		public DesasiarrayContext(InstruccionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitDesasiarray(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrtContext extends InstruccionContext {
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public PrtContext(InstruccionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitPrt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AsiarrayContext extends InstruccionContext {
		public AsigdimarrayContext asigdimarray() {
			return getRuleContext(AsigdimarrayContext.class,0);
		}
		public AsiarrayContext(InstruccionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitAsiarray(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AsiContext extends InstruccionContext {
		public AsiginstContext asiginst() {
			return getRuleContext(AsiginstContext.class,0);
		}
		public AsiContext(InstruccionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitAsi(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfContext extends InstruccionContext {
		public IfinstContext ifinst() {
			return getRuleContext(IfinstContext.class,0);
		}
		public IfContext(InstruccionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitIf(this);
			else return visitor.visitChildren(this);
		}
	}
